# forecast-in-a-box

./: CONTRIBUTING.md  justfile
backend/: justfile  pyproject.toml
backend/src/forecastbox/domain/artifact/: base.py  compatibility.py  io.py  manager.py
backend/src/forecastbox/domain/blueprint/: configuration_values.py  service.py
backend/src/forecastbox/domain/glyphs/: global_db.py  resolution.py
backend/src/forecastbox/domain/run/: background.py  compile.py  service.py
backend/src/forecastbox/entrypoint/: app.py
backend/src/forecastbox/routes/: blueprint.py
backend/src/forecastbox/utility/: pagination.py
backend/tests/integration/: conftest.py  test_blueprint.py  test_model.py  test_schedule.py
backend/tests/largeE2E/: blueprint.py
backend/tests/unit/: test_artifacts.py
backend/tests/unit/domain/blueprint/: test_configuration_values.py
backend/tests/unit/domain/glyphs/: test_resolution.py
backend/tests/unit/domain/run/: test_compile.py
backend/tests/unit/utility/: test_pagination.py
docs/developer/changeSpecs/: backend-validationV2-leftovers.md
frontend/: package-lock.json  package.json
frontend/mocks/data/: fable.data.ts  job.data.ts
frontend/mocks/handlers/: artifacts.handlers.ts  fable.handlers.ts  job.handlers.ts
frontend/src/: main.tsx  styles.css
frontend/src/api/: endpoints.ts
frontend/src/api/endpoints/: fable.ts
frontend/src/api/hooks/: useArtifacts.ts  useFable.ts
frontend/src/api/types/: artifacts.types.ts  fable.types.ts  job.types.ts
frontend/src/components/base/fields/: value-type-parser.ts
frontend/src/components/base/fields/fields/: GlyphTextInput.tsx
frontend/src/components/layout/: NavToggle.tsx
frontend/src/components/ui/: toggle-group.tsx  toggle.tsx
frontend/src/features/artifacts/components/: ArtifactCard.tsx  ArtifactDetailPage.tsx  ArtifactsList.tsx  QubeTree.tsx
frontend/src/features/executions/components/: BeamEdge.tsx  ExecutionCanvas.tsx  ExecutionDetailPage.tsx  ExecutionNode.tsx  OutputsPanel.tsx
frontend/src/features/executions/outputs/: MimeFilterChips.tsx  OutputCard.tsx  OutputsView.tsx  firstPartySniffers.ts  registry.ts  sniffers.ts  types.ts  useResolvedAdapter.ts
frontend/src/features/executions/outputs/actions/: copyImage.ts  download.ts
frontend/src/features/executions/outputs/adapters/: pdf.ts  (+3 more)
frontend/src/features/fable-builder/components/: FableBuilderPage.tsx
frontend/src/features/fable-builder/hooks/: useAllGlyphs.ts
frontend/src/features/fable-builder/utils/: glyph-expression-context.ts
frontend/src/features/glyphs/components/: GlyphFormDialog.tsx  GlyphListItem.tsx  GlyphsPage.tsx
frontend/src/features/glyphs/utils/: validate-key.ts
frontend/src/features/plugins/utils/: pipeline-generator.ts
frontend/src/locales/en/: artifacts.json  executions.json  glyphs.json
frontend/src/providers/: ToastProvider.tsx
frontend/src/routes/_authenticated/: executions.$jobId.tsx
frontend/tests/: setup.ts
frontend/tests/integration/features/executions/: job-detail.test.tsx
frontend/tests/unit/api/: fable-types.test.ts
frontend/tests/unit/api/endpoints/: fable.test.ts
frontend/tests/unit/api/hooks/: useFable.test.tsx
frontend/tests/unit/components/fields/: value-type-parser.test.ts
frontend/tests/unit/features/artifacts/: QubeTree.test.tsx
frontend/tests/unit/features/glyphs/: validate-key.test.ts
frontend/tests/unit/providers/: ToastProvider.test.tsx
install/: artifacts.json
(+10 files in other folders)
