[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=80", "setuptools-scm[toml]>=6.2" ]

[project]
name = "forecast-in-a-box"
description = "Weather Forecast in a Box"
readme = "README.md"
license = "Apache-2.0"
license-files = [ "LICENSE" ]
authors = [
  { name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int" },
]
requires-python = ">=3.11"

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]

# just a minimal set of dependencies to run the servers. Individual tasks install their runtime dependencies on their own
dependencies = [
  "aiosqlite",
  "apscheduler",
  "cloudpickle",
  "earthkit-workflows>=0.10.0,<1.0.0",
  "fastapi",
  "fastapi-users[oauth]",
  "fastapi-users-db-sqlalchemy",
  "fiab-core>=0.0.5,<1.0.0",
  "httpx<1",
  "httpx-oauth",
  "jinja2",
  "orjson",
  "psutil",
  "pydantic-settings",
  "pyrsistent",
  "python-multipart",
  "skinnywms",
  "starlette>=1.0", # NOTE we actually dont depend on starlette directly, only via fastapi/sse, but our code is already assuming 1.0+
  "sse-starlette",
  "toml",
  "uvicorn",
]

urls."Source code" = "https://github.com/ecmwf/forecast-in-a-box"

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "pytest-subtests", # TODO replace with pytest>=0 once the pygribjump issue fixed
  "pytest-asyncio",
  "pytest-xdist>=3.8",
  "pytest-mock>=3.15.1",
  "ty==0.0.2",
  "prek",
  "ruff>=0.15.8",
]

[tool.setuptools_scm]
version_file = "src/forecastbox/_version.py"
write_to_template = '''# Do not change! Do not track in version control!
__version__ = "{version}"
'''
local_scheme = "no-local-version"
root = ".."
fallback_version = "0.0.0"
tag_regex = '^[vd](?P<version>\d+(?:\.\d+){0,2}[^\+]*)(?:\+.*)?$'

[tool.ruff]
line-length = 140

lint.select = ["I", "ANN"]
# ANN401 disables usage of typing.Any -- but we kinda need that
lint.ignore = [ "E731", "ANN401" ]

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = false

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
testpaths = [ "tests" ]
addopts = "-n0 -s --log-disable findlibs"      # NOTE stick to 0 *or* have random server ports in the integration tests
# TODO once the diagnostic_/prognostic_ warning addressed, remove
filterwarnings = [
    "error",
    'ignore:diagnostic_variables is unsupported:deprecation.UnsupportedWarning',
    'ignore:prognostic_variables is unsupported:deprecation.UnsupportedWarning',
    'ignore:fix this test -- it was written for old qubed'
]

[tool.mypy]
plugins = "pydantic.mypy"

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]

[tool.uv.sources]
fiab-core = {workspace = true}
fiab-plugin-demo = {workspace = true}
fiab-mcp-server = {workspace = true}
fiab-plugin-ecmwf = {workspace = true}

[tool.uv.workspace]
members = [
    "packages/fiab-core",
    "packages/fiab-mcp-server",
    "packages/fiab-plugin-demo",
    "packages/fiab-plugin-ecmwf",
    "packages/fiab-plugin-test",
]

[tool.ty.rules]
possibly-missing-attribute = "ignore" # TODO actually fix all those occurrences instead
possibly-missing-import = "ignore"    # NOTE due to fastapi_users etc
